--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pequenaarea.bmp.com.pequenaarea" >
+    package="pequenaarea.bmp.com.pequenaarea">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar" >
-        <activity android:name=".Login" >
-
-        </activity>
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".Entrada"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_entrada"
-            android:theme="@style/FullscreenTheme" >
-
+            android:name=".activity.Login"
+            android:label="Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.CriaUsuario"></activity>
+        <activity android:name=".activity.TelaPrincipal"></activity>
     </application>
 
 </manifest>
